--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 </head>
 <body class="bg-slate-800 text-slate-100">
   <div id="root"></div>
-  <script type="module" src="/index.tsx"></script>
+  <script type="module" src="/index.js"></script>
 </body>
 </html><link rel="stylesheet" href="index.css">
 <script src="index.tsx" type="module"></script>
