--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
   <title>GitHub README Generator</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <style>
+    @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap');
+
     /* Custom scrollbar for webkit browsers */
     ::-webkit-scrollbar {
       width: 8px;
@@ -26,7 +28,6 @@
     body {
       font-family: 'Inter', sans-serif; /* A common, clean font often used with Tailwind */
     }
-    @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap');
 
     /* Styling for react-markdown output */
     .markdown-preview h1, .markdown-preview h2, .markdown-preview h3 {
@@ -85,5 +86,4 @@
   <div id="root"></div>
   <script type="module" src="/index.js"></script>
 </body>
-</html><link rel="stylesheet" href="index.css">
-<script src="index.tsx" type="module"></script>
+</html>
