--- a/index.html
+++ b/index.html
@@ -84,6 +84,6 @@
 </head>
 <body class="bg-slate-800 text-slate-100">
   <div id="root"></div>
-  <script type="module" src="/index.js"></script>
+  <script type="module" src="/index.tsx"></script>
 </body>
 </html>
